src/test/ui/or-patterns/issue-64879-trailing-before-guard.stderr
error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/issue-64879-trailing-before-guard.rs:10:14
   |
LL |         E::A |
   |         ---- while parsing this or-pattern starting here
LL |         E::B |
   |              ^ help: remove the `|`

error[E0308]: mismatched types
  --> $DIR/issue-64879-trailing-before-guard.rs:12:42
   |
LL |             let recovery_witness: bool = 0;
   |                                          ^ expected `bool`, found integer

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
